# My-Budget

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
include/cli/: CLIApp.hpp  InputHelper.hpp
include/database/: DatabaseManager.hpp
include/enums/: Enums.hpp
include/gui/: LoginWindow.hpp  MainWindow.hpp  SettingsWindow.hpp
include/models/: Budget.hpp  Category.hpp  Session.hpp  Transaction.hpp  User.hpp
include/repositories/: ICategoryRepository.hpp  ITransactionRepository.hpp  IUserRepository.hpp  IcategoryRepository.hpp  InMemoryCategoryRepository.hpp  InMemoryTransactionRepository.hpp  InMemoryUserRepository.hpp  SqliteCategoryRepository.hpp  SqliteTransactionRepository.hpp  SqliteUserRepository.hpp
include/services/: AuthService.hpp  CategoryService.hpp  TransactionService.hpp
include/validators/: UserValidator.hpp
src/cli/: CLIApp.cpp  InputHelper.cpp
src/database/: DatabaseManager.cpp
src/gui/: LoginWindow.cpp  MainWindow.cpp  SettingsWindow.cpp
src/models/: Session.cpp
src/repositories/: InMemoryCategoryRepository.cpp  InMemoryTransactionRepository.cpp  InMemoryUserRepository.cpp  SqliteCategoryRepository.cpp  SqliteTransactionRepository.cpp  SqliteUserRepository.cpp
src/services/: AuthService.cpp  CategoryService.cpp  TransactionService.cpp
src/validators/: UserValidator.cpp
tests/: CMakeLists.txt
tests/services/: AuthServiceTest.cpp  CategoryServiceTest.cpp  TransactionServiceTest.cpp
tests/validators/: UserValidatorTest.cpp
